--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -19,10 +19,12 @@
       </nav>
 
       <div class="header-user user">
-         <span class="user__wallet">0,00 ₽</span>
+         <div class="user__block">
+            <span class="user__wallet">0,00 ₽</span>
 
-         <div class="user__avatar">
-            <img src="img/user-avatar.jpg" alt="user-avatar" />
+            <div class="user__avatar">
+               <img src="img/user-avatar.jpg" alt="user-avatar" />
+            </div>
          </div>
          <div class="user__info">
             <p class="user__info-name">Елена Молдованова</p>
