--- a/verification.html
+++ b/verification.html
@@ -257,7 +257,9 @@
                            </div>
                         </div>
 
-                        <button type="submit" class="form__btn btn icon-arrow">Пройти верификацию</button>
+                        <div class="form-row pt0">
+                           <button type="submit" class="form__btn btn icon-arrow">Пройти верификацию</button>
+                        </div>
                      </form>
                   </div>
                </div>
