--- a/verification.html
+++ b/verification.html
@@ -57,17 +57,17 @@
             <main class="main-cabinet cabinet">
                <div class="cabinet-nav">
                   <ul class="cabinet-nav__list">
-                     <li class="cabinet-nav__item cabinet-nav__item--active">
+                     <li class="cabinet-nav__item ">
                         <a href="profile.html"><span class="icon-avatar"></span>Профиль</a>
                      </li>
-                     <li class="cabinet-nav__item ">
+                     <li class="cabinet-nav__item cabinet-nav__item--active">
                         <a href="verification.html"><span class="icon-checked"></span>Верификация</a>
                      </li>
                      <li class="cabinet-nav__item ">
                         <a href="#"><span class="icon-objects"></span> Объекты</a>
                      </li>
                      <li class="cabinet-nav__item ">
-                        <a href="#"><span class="icon-cup"></span> Стакан</a>
+                        <a href="cup.html"><span class="icon-cup"></span> Стакан</a>
                      </li>
                      <li class="cabinet-nav__item ">
                         <a href="#"><span class="icon-documents"></span> Документы</a>
@@ -85,7 +85,7 @@
                      <form action="#" class="item-verification__form form-2 form">
                         <div class="form-row">
                            <div class="form-block">
-                              <h2 class="cabinet__title">Верификация</h2>
+                              <h1 class="cabinet__title">Верификация</h1>
                               <div class="form-block__inner">
                                  <div class="form-group">
                                     <div class="form-group__header">
