--- a/cup.html
+++ b/cup.html
@@ -283,9 +283,9 @@
 
                            <div class="cup__table-action action__cup">
                               <div class="action__cup-block">
-                                 <span class="action__cup-up icon-triangle"></span>
+                                 <button class="action__cup-up icon-triangle"></button>
                                  <span class="action__cup-number">1</span>
-                                 <span class="action__cup-down icon-triangle"></span>
+                                 <button class="action__cup-down icon-triangle"></button>
                               </div>
                               <button type="submit" class="btn action__cup-btn icon-arrow">Заявка</button>
                            </div>
