--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
 							<li class="cabinet-nav__item ">
 								<a href="#"><span class="icon-documents"></span> Документы</a>
 							</li>
+							<li class="cabinet-nav__item ">
+								<a href="login.html"><span class="icon-auth-btn"></span> Вход</a>
+							</li>
+							<li class="cabinet-nav__item ">
+								<a href="register.html"><span class="icon-auth-btn"></span> Реестрация</a>
+							</li>
 						</ul>
 						<div class="cabinet-nav__collback">
 							<p>Есть вопрос?
